--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -9,6 +9,6 @@
 
 .primary,
 .secondary {
-    font-family: 'Helvetica', 'Times New Roman', 'sans-serif';
+    font-family: Helvetica, "Times New Roman", sans-serif;
     font-size: 28px;
 }
