--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -1,23 +1,23 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:Arial, sans-serif, sans-serif, Helvetica, sans-serif;
 }
 
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
+  font-weight: bold;
 }
 
 .para {
   font-size: 22px;
 }
 
-.confirm {
+.small-para {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -29,14 +29,16 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text {
   color: rgb(0, 0, 0);
-  font-weight: 800;
+  font-size: 22px;
+  font-weight: thin;
+}
+
+.text.child {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
   font-size: 14px;
 }
 
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
-}
+
