--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
 }
 
 img {
@@ -10,6 +14,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.card-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 36px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 8px;
+  flex: 0 1 200px;
 }
 
 /* do not edit this footer */
@@ -24,3 +43,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
