--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,10 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 42px;
-}
+  text-align: center;
 
 img {
   width: 100px;
@@ -14,21 +10,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 .card-wrapper {
   display: flex;
   justify-content: center;
-  gap: 36px;
+  gap: 52px;
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 8px;
-  flex: 0 1 200px;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
