--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,68 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  padding: 16px;
+  font-size: 32px;
+  font-weight: 800;
 }
 
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  padding: 16px;
+  max-height: 72px;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+a {
+text-decoration: none;
+color: white;
+font-size: 24px;
+}
+
+ul {
+ list-style: none;
+ margin: 0;
+ padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+.cards-wrapper {
+  display: flex;
+  gap: 24px;
+  padding: 32px;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  flex: 0 1 180px;
+} 
+
+.content {
+  display: flex;
+  flex: 1;
 }
+
